# xbill-mini

./: pyproject.toml
app/: exporter.py  mailer.py  main.py  models.py  pdf.py  totals.py  ubl_template.xml  validation.py
app/web/static/: app.js  style.css
app/web/templates/: index.html
